--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.3.1",
-    "react-dom": "^16.4.0",
-    "react-scripts": "1.1.4",
     "axios": "^0.18.0",
     "lodash": "^4.17.5",
     "moment": "^2.22.1",
     "prop-types": "^15.6.1",
     "ramda": "^0.25.0",
+    "react": "^16.3.1",
+    "react-dom": "^16.4.0",
+    "react-feather": "^1.1.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-scripts": "1.1.4",
     "redux": "^3.7.2",
     "redux-actions": "^2.3.0",
     "redux-form": "^7.3.0",
