Removed quote hover

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,17 @@
 {
-  "short_name": "React App",
-  "name": "React Extension",
+  "short_name": "Personal Dashboard for Programmers",
+  "name": "Personal Dashboard for Programmers",
+  "description":
+    "Replace default tab page in Chrome with a dashboard that includes Hacker News articles, Product Hunt posts, and a to-do list.",
+  "permissions": ["tabs", "storage", "identity"],
   "manifest_version": 2,
   "chrome_url_overrides": {
     "newtab": "index.html"
   },
-  "version": "1.0"
+  "icons": {
+    "16": "assets/img/coding-16.png",
+    "48": "assets/img/coding-48.png",
+    "128": "assets/img/coding-128.png"
+  },
+  "version": "1.1"
 }
