--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.3.1",
     "react-dom": "^16.4.0",
     "react-feather": "^1.1.0",
+    "react-loading": "^2.0.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
